<resources>
    <string name="app_name">AndroidFundamentalDicoding2022</string>

    <!--Intent-->
    <string name="move_activity">Pindah Activity</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>


    <!--Fragment-->
    <string name="question_coach">Choose The Coach</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="close">Close</string>
    <string name="show_dialog">Show Dialog</string>

    <!--Module 2 - Drawer-->
    <string name="narenda_wicaksono">Narenda Wicaksono</string>
    <string name="narenda_dicoding_com">narenda@dicoding.com</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>

    <!-- ScrollView -->
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inches\n
    FHD AMOLED at 441ppi\n
    2.5D Corning® Gorilla® Glass 4</string>
    <string name="content_specs_size">5.6 x 2.7 x 0.2 ~ 0.3 inches 143.8 x 69.5 x 7.3 ~ 8.5 mm</string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCDMA): up to 26 hours\n
    Internet use time (Wi-Fi): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fast charging: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="search">Search Icon</string>
    <string name="menu_1">Announcement Icon</string>
    <string name="menu_2">Menu 2</string>
    <string name="search_hint">Search Something</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_bar">Action Bar</string>
    <string name="navigation_drawer">Navigation Drawer</string>

    <!--  Async & Background Proccesing  -->
    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>
    <string name="async_and_background_process">Async And background process</string>
    <string name="library_networking">Library Networking</string>
    <string name="web_api_and_parsing_json">WEB API AND PARSING JSON</string>

    <!-- Networkin LoopJ & Parsing Data -->
    <string name="quote">When do you think people die? When they are shot through the heart by the bullet of a pistol? No. When they are ravaged by an incurable disease? No. When they drink a soup made from a poisonous mushroom!? No! It’s when… they are FORGOTTEN.</string>
    <string name="author">- Dr. Hiluluk</string>
    <string name="show_list_quotes">Show me list of quotes</string>

    <!-- Restaurant Review With REtrofit -->
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="restaurant_api_with_retrofit">Restaurant Api With REtrofit</string>

    <!-- Viewmodel Modul -->
    <string name="width">Lebar</string>
    <string name="result">Hasil</string>
    <string name="calculate">Hitung</string>
    <string name="height">Tinggi</string>
    <string name="length">Panjang</string>
    <string name="hello_dicoding">Hello Dicoding</string>
    <string name="seconds">%d seconds elapsed</string>
    <string name="view_model_practice">View Model Practice</string>
    <string name="use_live_data_ppractice">USE LIVE DATA pPRACTICE</string>


</resources>